<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Notes</string>
    <string name="app_widget2x2">Notes 2x2</string>
    <string name="app_widget4x4">Notes 4x4</string>
    <string name="widget_havenot_content">No associated note found, click to create associated note.</string>
    <string name="widget_under_visit_mode">Privacy mode，can not see note content</string>
    <string name="notelist_string_info">…</string>
     <string name="notelist_menu_new">Add note</string>
     <string name="notes_home_headline">Local notes, redesigned</string>
     <string name="notes_home_summary">Fast capture, folders, reminders, and widgets in one local-first workspace.</string>
     <string name="notes_folder_summary">Folder view with your most recent notes at the top.</string>
     <string name="notes_call_summary">Call notes grouped by recency.</string>
     <string name="notes_search_shortcut">Search notes</string>
     <string name="notes_settings_shortcut">Open settings</string>
     <string name="notes_create_cta">New note</string>
     <plurals name="notes_item_count">
         <item quantity="one">%1$d item</item>
         <item quantity="other">%1$d items</item>
     </plurals>
     <string name="notes_editor_new">Compose note</string>
     <string name="notes_editor_existing">Editing note</string>
     <string name="notes_editor_hint">Write freely, or switch to checklist mode when structure matters.</string>
     <string name="notes_search_screen_title">Search notes</string>
     <string name="notes_search_results_hint">Search across every local note.</string>
     <string name="notes_search_idle_title">Find a note fast</string>
     <string name="notes_search_idle_message">Type a title, phrase, or keyword to search your local notes.</string>
     <string name="notes_search_empty_title">No matches yet</string>
     <string name="notes_search_empty_message">Try a different keyword or a shorter phrase.</string>
     <string name="notes_search_recent_title">Recent searches</string>
     <string name="notes_search_clear_history">Clear</string>
     <string name="notes_search_untitled_note">Untitled note</string>
    <string name="delete_remind_time_message">Delete reminder successfully</string>
    <string name="set_remind_time_message">Set reminder</string>
    <string name="note_alert_expired">Expired</string>
    <string name="note_alert_icon_description">Reminder set</string>
    <string name="format_date_ymd">yyyyMMdd</string>
    <string name="format_datetime_mdhm">MMMd kk:mm</string>
    <string name="notealert_ok">Got it</string>
    <string name="notealert_enter">Take a look</string>
    <string name="note_link_tel">Call</string>
    <string name="note_link_email">Send email</string>
    <string name="note_link_web">Browse web</string>
    <string name="note_link_other">Open map</string>
    <!-- Text export file information -->
    <string name="file_path" translatable="false">/MIUI/notes/</string>
    <string name="file_name_txt_format" translatable="false">notes_%s.txt</string>
    <!-- notes list string -->
    <string name="format_folder_files_count" translatable="false">(%d)</string>
    <string name="format_folder_title" translatable="false">%1$s%2$s</string>
    <string name="format_header_summary" translatable="false">%1$s %2$s</string>
    <string name="menu_create_folder">New Folder</string>
    <string name="menu_export_text">Export text</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_sync_cancel">Cancel syncing</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_move">Move to folder</string>
    <plurals name="menu_select_title">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="menu_select_none">Nothing selected, the operation is invalid</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="menu_font_size">Font size</string>
    <string name="menu_font_small">Small</string>
    <string name="menu_font_normal">Medium</string>
    <string name="menu_font_large">Large</string>
    <string name="menu_font_super">Super</string>
     <string name="menu_note_color">Note color</string>
     <string name="note_color_yellow">Warm yellow</string>
     <string name="note_color_blue">Ocean blue</string>
     <string name="note_color_white">Paper white</string>
     <string name="note_color_green">Mint green</string>
     <string name="note_color_red">Coral red</string>
    <string name="menu_list_mode">Enter check list</string>
    <string name="menu_normal_mode">Leave check list</string>
    <string name="menu_folder_view">View folder</string>
    <string name="menu_folder_delete">Delete folder</string>
    <string name="menu_folder_change_name">Change folder name</string>
    <string name="folder_exist">The folder %1$s exist, please rename</string>
    <string name="menu_share">Share</string>
    <string name="menu_send_to_desktop">Send to home</string>
    <string name="menu_alert">Remind me</string>
    <string name="menu_remove_remind">Delete reminder</string>
    <string name="menu_title_select_folder">Select folder</string>
    <string name="menu_move_parent_folder">Parent folder</string>
    <string name="info_note_enter_desktop">Note added to home</string>
    <string name="alert_message_delete_folder">Confirm to delete folder and its notes?</string>
    <string name="alert_title_delete">Delete selected notes</string>
    <plurals name="alert_message_delete_notes">
        <item quantity="one">Confirm to delete the selected %d note?</item>
        <item quantity="other">Confirm to delete the selected %d notes?</item>
    </plurals>
    <string name="alert_message_delete_note">Confirm to delete this note?</string>
    <plurals name="format_move_notes_to_folder">
        <item quantity="one">Have moved selected %1$d note to %2$s folder</item>
        <item quantity="other">Have moved selected %1$d notes to %2$s folder</item>
    </plurals>
    <!-- Error information -->
    <string name="error_sdcard_unmounted">SD card busy, not available now</string>
    <string name="error_sdcard_export">Export failed, please check SD card</string>
    <string name="error_note_not_exist">The note is not exist</string>
    <string name="error_note_empty_for_clock">Sorry, can not set clock on empty note</string>
    <string name="error_note_empty_for_send_to_desktop">Sorry, can not send and empty note to home</string>
    <string name="success_sdcard_export">Export successful</string>
    <string name="failed_sdcard_export">Export fail</string>
    <string name="format_exported_file_location">Export text file (%1$s) to SD (%2$s) directory</string>
    <!-- Sync -->
    <string name="ticker_syncing">Syncing notes…</string>
    <string name="ticker_success">Sync is successful</string>
    <string name="ticker_fail">Sync is failed</string>
    <string name="ticker_cancel">Sync is canceled</string>
    <string name="success_sync_account">Sync is successful with account %1$s</string>
    <string name="error_sync_network">Sync failed, please check network and account settings</string>
    <string name="error_sync_internal">Sync failed, internal error occurs</string>
    <string name="error_sync_cancelled">Sync is canceled</string>
    <string name="sync_progress_login">Logging into %1$s…</string>
    <string name="sync_progress_init_list">Getting remote note list…</string>
    <string name="sync_progress_syncing">Synchronize local notes with Google Task…</string>
    <!-- Preferences -->
    <string name="preferences_title">Settings</string>
    <string name="preferences_account_title">Sync account</string>
    <string name="preferences_account_summary">Sync notes with google task</string>
    <string name="preferences_last_sync_time">Last sync time %1$s</string>
    <string name="preferences_last_sync_time_format" translatable="false">yyyy-MM-dd hh:mm:ss</string>
    <string name="preferences_add_account">Add account</string>
    <string name="preferences_menu_change_account">Change sync account</string>
    <string name="preferences_menu_remove_account">Remove sync account</string>
    <string name="preferences_menu_cancel">Cancel</string>
    <string name="preferences_button_sync_immediately">Sync immediately</string>
    <string name="preferences_button_sync_cancel">Cancel syncing</string>
    <string name="preferences_dialog_change_account_title">Current account %1$s</string>
    <string name="preferences_dialog_change_account_warn_msg">All sync related information will be deleted, which may result in duplicated items sometime</string>
    <string name="preferences_dialog_select_account_title">Sync notes</string>
    <string name="preferences_dialog_select_account_tips">Please select a google account. Local notes will be synced with google task.</string>
    <string name="preferences_toast_cannot_change_account">Cannot change the account because sync is in progress</string>
    <string name="preferences_toast_success_set_accout">%1$s has been set as the sync account</string>
    <string name="preferences_bg_random_appear_title">New note background color random</string>
     <string name="preferences_bg_random_appear_summary">Shuffle the paper color whenever a new note is created.</string>

    <string name="button_delete">Delete</string>
    <string name="call_record_folder_name">Call notes</string>
     <string name="hint_foler_name">Input name</string>
     <string name="notes_palette_description">Change note color</string>

    <string name="search_label">Searching Notes</string>
    <string name="search_hint">Search notes</string>
    <string name="search_setting_description">Text in your notes</string>
    <string name="search">Notes</string>
    <string name="datetime_dialog_ok">set</string>
    <string name="datetime_dialog_cancel">Cancel</string>
    <plurals name="search_results_title">
         <item quantity="one"><xliff:g id="number" example="1">%1$s</xliff:g> result for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
        <!-- Case of 0 or 2 or more results. -->
        <item quantity="other"><xliff:g id="number" example="15">%1$s</xliff:g> results for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
    </plurals>

</resources>
